--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
-            <a href="/" class="header__link_active"> главная</a>
+            <a href="#" class="header__link link__active"> главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="/" class="header__link">посмотреть лоты </a>
+            <a href="#" class="header__link">посмотреть лоты </a>
           </li>
           <li class="header__links-list-item">
-            <a href="/" class="header__link">об аукционе </a>
+            <a href="#" class="header__link">об аукционе </a>
           </li>
         </ul>
       </nav>
@@ -31,10 +31,13 @@
           class="header__logo-image"
         />
       </a>
-      <address class="header__address">
-        <a class="address__number" href="tel:+79995555555">+9 999 555 5555</a>
-        <a class="address_mail" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <span class="address__text">наб. Принсенграхт 263- 265, Амстердам</span>
+      <address class="header__address address">
+        <a class="address__link" href="tel:+79995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <span class="address__text"
+          >наб. Принсенграхт 263-<br />
+          265, Амстердам</span
+        >
       </address>
     </header>
     <main>
@@ -46,10 +49,10 @@
           <span class="text-right">надо</span>
         </h1>
         <div class="cover__description">
-          <span class="cover__description-text"
-            >Аукцион вещей, в которые никто не верил</span
-          >
-          <button class="bet-button">сделать ставку</button>
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button type="button" class="bet-button">сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -139,21 +142,21 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__address">
-        <a class="address__number" href="tel:+79995555555">+9 999 555 5555</a>
-        <a class="address_mail" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <address class="address">
+        <a class="address__link" href="tel:+79995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <span class="address__text">наб. Принсенграхт 263- 265, Амстердам</span>
       </address>
       <nav class="footer__menu">
         <ul class="footer__links-list">
           <li class="footer__links-list-item">
-            <a href="/" class="footer__link_active"> главная</a>
+            <a href="#" class="footer__link link__active"> главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="/" class="footer__link">посмотреть лоты </a>
+            <a href="#" class="footer__link">посмотреть лоты </a>
           </li>
           <li class="footer__links-list-item">
-            <a href="/" class="footer__link">об аукционе </a>
+            <a href="#" class="footer__link">об аукционе </a>
           </li>
         </ul>
       </nav>
